# geometry

./: .gitignore  Dockerfile  Dockerfile-db  ReadMe.md  alembic.ini  app.py  data_migration.py  deployment.yaml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0edb7e2836af_init_table.py  dc074cab1b97_init_table.py
app/: app.py  main.py
app/conf/: db.py  settings.py
app/endpoints/: __init__.py  fields.py
app/endpoints/dependecies/: db.py  services.py  utils.py
app/endpoints/services/: field_service.py
app/models/: field.py
app/schemas/: fields.py
db/: init.sql
scripts/: data_migration.py
