[tool.poetry]
name = "geometry"
version = "0.1.0"
description = ""
authors = ["Petro <“petrosaliiwork@gmail.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.1"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
asyncpg = "^0.29.0"
greenlet = "^3.0.1"
uvloop = "^0.19.0"
alembic = "^1.12.1"
geoalchemy2 = "^0.14.2"
psycopg2-binary = "^2.9.9"
shapely = "^2.0.2"
geojson = "^3.1.0"
black = "^23.11.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
